Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Add your HTML content here -->
+  <!-- Hero Section -->
+  <section id="hero">
+    <!-- This is the main introduction area -->
+    <h1>Welcome to My Personal Website</h1>
+    <p>I'm learning web development and this is my portfolio site.</p>
+  </section>
+
+  <!-- Bio Section -->
+  <section id="bio">
+    <!-- Add your headshot image below -->
+    <img src="img/headshot.jpg" alt="My headshot" style="width:120px; border-radius:50%; display:block; margin: 0 auto 16px auto;">
+    <!-- A short bio about yourself -->
+    <h2>About Me</h2>
+    <p>Hello! My name is DJ. I'm a student learning HTML and CSS. I enjoy creating simple and clean websites as I learn new skills.</p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <!-- Skills section with pill-shaped skills -->
+    <h2>My Skills</h2>
+    <p class="skills-desc">Here are a few of the skills I bring to the table:</p>
+    <div class="skills-list">
+      <span class="skill-pill">HTML</span>
+      <span class="skill-pill">CSS</span>
+      <span class="skill-pill">JavaScript (beginner)</span>
+      <span class="skill-pill">Customer Support</span>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <!-- How people can contact you -->
+    <h2>Contact Me</h2>
+    <p>You can reach me at: <a href="mailto:your.email@example.com">devar.rav@gmail.com</a></p>
+  </section>
 </body>
 </html>
